  x Generate RAML (http://raml.org) with json-schema (http://json-schema.org) for all entities to use with entity REST API
    x get: \ queryParameters: \ ${pk/etc}: \ (type:, required:, etc)
    x get: \ responses: \ 200: \ body: \ application/json: \ schema: !include schema/${name}.json
    x nested like: /orders: \ /${orderId}: \ /orderItems: \ ...
    - see MuleSoft, other tools
  - Generate json-schema (http://json-schema.org) documents, make available through entity REST API
    x URL pattern? maybe /rest/schema (or /rest/schema.json) for all
    x for particular entity: /rest/schema/${name}.json or just /rest/schema/${name}
    x MIME type: application/schema+json
    x use hyper schema links to describe API options
  - Generate minimal Data Document based on changes (per TX possible, runs async so not really; from existing doc, like current ES doc)
  - Update database from Data Document
  - Data Document UI
    - show/edit field, rel alias, condition, link
    - special form for add (edit?) field with 5 drop-downs for relationships, one for field, all updated based on
      master entity and previous selections
  - Data Document REST interface
    - get single by dataDocumentId and PK values for primary entity
    - search through ElasticSearch for those with associated feed/index
    - json-schema, RAML, Swagger API defs
    - generic service for sending Data Document to REST (or other?) end point
  - Master Entity REST Interface
    x like /rest/v1 but only for entities with master definition(s)
      x through /rest/m1/${entity}/${master}
      x /rest/v1/${entity}?master=${master}
    - generate json-schema, RAML, Swagger for full master def hierarchies
  - Service REST API
    - goal to define service mappings to REST path, method, etc for:
      - Swagger, json-schema, RAML descriptors
      - handling service calls through generic transition like /rest/v1, instead of explicit transitions like ExampleApp.xml