@@ -59,6 +59,7 @@ public interface WebFacade {
     void handleXmlRpcServiceCall();
     void handleJsonRpcServiceCall();
     void handleEntityRestCall(List<String> extraPathNameList, boolean masterNameInPath);
-    void handleEntityRestSchema(List<String> extraPathNameList, String schemaUri, String linkPrefix, String schemaLinkPrefix);
-    void handleEntityRestRaml(List<String> extraPathNameList, String linkPrefix, String schemaLinkPrefix);
+    void handleEntityRestSchema(List<String> extraPathNameList, String schemaUri, String linkPrefix,
+                                String schemaLinkPrefix, boolean getMaster);
+    void handleEntityRestRaml(List<String> extraPathNameList, String linkPrefix, String schemaLinkPrefix, boolean getMaster);
 }
